Fixed spacing of the contactdiv on the homepage

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,10 @@
   text-align: center;
   background-color: #282c34;
   font-family: 'Courier New',  Courier, 'Lucida Console';
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 
