--- a/src/Pages/Home/ContactInfo.css
+++ b/src/Pages/Home/ContactInfo.css
@@ -1,10 +1,6 @@
 .ContactDiv{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center; 
-    z-index: 1;
-    margin:3em;
 }
 
 @media (min-aspect-ratio: 4/4) {
